# ngmiDBMS

./: .gitignore  SETUP.md  pyproject.toml  requirements.txt
src/database/: __init__.py
src/llm_driver/prompts/: prompt_templates.py
src/llm_driver/schemas/: response_schemas.py
src/services/job_service/: job_parser.py  job_service.py
src/services/resume_service/: resume_service.py
ui/: api.py  app.py  db.py  index.html  package.json
ui/frontend/: index.html  package-lock.json  package.json  tsconfig.json
ui/frontend/src/: App.tsx  styles.css
ui/src/: App.tsx  styles.css
