[project]
name = "ngmidbms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2.3",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.0",
    "langchain-community>=0.4.1",
    "pypdf>=6.4.0",
    "psycopg2>=2.9.11",
    "dash>=3.3.0",
    "dash-cytoscape>=1.0.2",
    "pandas>=2.3.3",
    "python-multipart>=0.0.9",
    "rich>=14.2.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.5",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.28.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.29",
]
